tests/algorithms/x/C/maths/dual_number_automatic_differentiation.c
// Generated by Mochi 0.10.32 on 2025-08-11 22:22 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>
#include <math.h>


static double* list_append_double(double *arr, size_t *len, double val) {
    arr = realloc(arr, (*len + 1) * sizeof(double));
    arr[*len] = val;
    (*len)++;
    return arr;
}

#include <time.h>
#include <stdlib.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

typedef struct Dual Dual;

struct Dual {
    double real;
    double *duals;
    size_t duals_len;
};

static long long* list_append_long_long(long long *arr, size_t *len, long long val) {
    arr = realloc(arr, (*len + 1) * sizeof(long long));
    arr[*len] = val;
    (*len)++;
    return arr;
}

Dual make_dual(double real, long long rank);
Dual dual_from_list(double real, double * ds, size_t ds_len);
Dual dual_add(Dual a, Dual b);
Dual dual_add_real(Dual a, double b);
Dual dual_mul(Dual a, Dual b);
Dual dual_mul_real(Dual a, double b);
Dual dual_pow(Dual x, long long n);
double factorial(long long n);
double differentiate(Dual(*func)(Dual), double position, long long order);
void test_differentiate();
Dual _f1(Dual x);
void user_main();
Dual _f(Dual y);
int main(void);

Dual make_dual(double real, long long rank) {
    double *ds = NULL;
    size_t ds_len = 0;
    long long i = 0LL;
    while (i < rank) {
        ds = list_append_long_long(ds, &ds_len, 1.0);
        i = i + 1LL;
    }
    return (Dual){.real = real, .duals = ds, .duals_len = ds_len};
}

Dual dual_from_list(double real, double * ds, size_t ds_len) {
    return (Dual){.real = real, .duals = ds, .duals_len = ds_len};
}

Dual dual_add(Dual a, Dual b) {
    double *s_dual = NULL;
    size_t s_dual_len = 0;
    long long i = 0LL;
    while (i < a.duals_len) {
        s_dual = list_append_double(s_dual, &s_dual_len, a.duals[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? a.duals_len + _mochi_idx : _mochi_idx;})]);
        i = i + 1LL;
    }
    double *o_dual = NULL;
    size_t o_dual_len = 0;
    long long j = 0LL;
    while (j < b.duals_len) {
        o_dual = list_append_double(o_dual, &o_dual_len, b.duals[(int)({long long _mochi_idx = j; _mochi_idx < 0 ? b.duals_len + _mochi_idx : _mochi_idx;})]);
        j = j + 1LL;
    }
    if (s_dual_len > o_dual_len) {
        long long diff = s_dual_len - o_dual_len;
        long long k = 0LL;
        while (k < diff) {
            o_dual = list_append_long_long(o_dual, &o_dual_len, 1.0);
            k = k + 1LL;
        }
    } else {
        if (s_dual_len < o_dual_len) {
            long long diff2 = o_dual_len - s_dual_len;
            long long k2 = 0LL;
            while (k2 < diff2) {
                s_dual = list_append_long_long(s_dual, &s_dual_len, 1.0);
                k2 = k2 + 1LL;
            }
        }
    }
    double *new_duals = NULL;
    size_t new_duals_len = 0;
    long long idx = 0LL;
    while (idx < s_dual_len) {
        new_duals = list_append_double(new_duals, &new_duals_len, s_dual[(int)({long long _mochi_idx = idx; _mochi_idx < 0 ? s_dual_len + _mochi_idx : _mochi_idx;})] + o_dual[(int)({long long _mochi_idx = idx; _mochi_idx < 0 ? o_dual_len + _mochi_idx : _mochi_idx;})]);
        idx = idx + 1LL;
    }
    return (Dual){.real = a.real + b.real, .duals = new_duals, .duals_len = new_duals_len};
}

Dual dual_add_real(Dual a, double b) {
    double *ds = NULL;
    size_t ds_len = 0;
    long long i = 0LL;
    while (i < a.duals_len) {
        ds = list_append_double(ds, &ds_len, a.duals[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? a.duals_len + _mochi_idx : _mochi_idx;})]);
        i = i + 1LL;
    }
    return (Dual){.real = a.real + b, .duals = ds, .duals_len = ds_len};
}

Dual dual_mul(Dual a, Dual b) {
    long long new_len = (a.duals_len + b.duals_len) + 1LL;
    double *new_duals = NULL;
    size_t new_duals_len = 0;
    long long idx = 0LL;
    while (idx < new_len) {
        new_duals = list_append_long_long(new_duals, &new_duals_len, 0.0);
        idx = idx + 1LL;
    }
    long long i = 0LL;
    while (i < a.duals_len) {
        long long j = 0LL;
        while (j < b.duals_len) {
            long long pos = (i + j) + 1LL;
            double val = new_duals[(int)({long long _mochi_idx = pos; _mochi_idx < 0 ? new_duals_len + _mochi_idx : _mochi_idx;})] + (a.duals[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? a.duals_len + _mochi_idx : _mochi_idx;})] * b.duals[(int)({long long _mochi_idx = j; _mochi_idx < 0 ? b.duals_len + _mochi_idx : _mochi_idx;})]);
            new_duals[(int)(pos)] = val;
            j = j + 1LL;
        }
        i = i + 1LL;
    }
    long long k = 0LL;
    while (k < a.duals_len) {
        double val = new_duals[(int)({long long _mochi_idx = k; _mochi_idx < 0 ? new_duals_len + _mochi_idx : _mochi_idx;})] + (a.duals[(int)({long long _mochi_idx = k; _mochi_idx < 0 ? a.duals_len + _mochi_idx : _mochi_idx;})] * b.real);
        new_duals[(int)(k)] = val;
        k = k + 1LL;
    }
    long long l = 0LL;
    while (l < b.duals_len) {
        double val = new_duals[(int)({long long _mochi_idx = l; _mochi_idx < 0 ? new_duals_len + _mochi_idx : _mochi_idx;})] + (b.duals[(int)({long long _mochi_idx = l; _mochi_idx < 0 ? b.duals_len + _mochi_idx : _mochi_idx;})] * a.real);
        new_duals[(int)(l)] = val;
        l = l + 1LL;
    }
    return (Dual){.real = a.real * b.real, .duals = new_duals, .duals_len = new_duals_len};
}

Dual dual_mul_real(Dual a, double b) {
    double *ds = NULL;
    size_t ds_len = 0;
    long long i = 0LL;
    while (i < a.duals_len) {
        ds = list_append_double(ds, &ds_len, a.duals[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? a.duals_len + _mochi_idx : _mochi_idx;})] * b);
        i = i + 1LL;
    }
    return (Dual){.real = a.real * b, .duals = ds, .duals_len = ds_len};
}

Dual dual_pow(Dual x, long long n) {
    if (n < 0LL) {
        panic("power must be a positive integer");
    }
    if (n == 0LL) {
        return (Dual){.real = 1.0, .duals = NULL, .duals_len = 0};
    }
    Dual res = x;
    long long i = 1LL;
    while (i < n) {
        res = dual_mul(res, x);
        i = i + 1LL;
    }
    return res;
}

double factorial(long long n) {
    double res = 1.0;
    long long i = 2LL;
    while (i <= n) {
        res = res * (double)(i);
        i = i + 1LL;
    }
    return res;
}

double differentiate(Dual(*func)(Dual), double position, long long order) {
    Dual d = make_dual(position, 1LL);
    long long result = func(d);
    if (order == 0LL) {
        return result.real;
    }
    return result.duals[(int)({long long _mochi_idx = order - 1LL; _mochi_idx < 0 ? result.duals_len + _mochi_idx : _mochi_idx;})] * factorial(order);
}

void test_differentiate() {
    if (differentiate(f1, 2.0, 2LL) != 2.0) {
        panic("f1 failed");
    }
    if (differentiate(f2, 9.0, 2LL) != 196830.0) {
        panic("f2 failed");
    }
    if (differentiate(f3, 3.5, 4LL) != 7605.0) {
        panic("f3 failed");
    }
    if (differentiate(f4, 4.0, 3LL) != 0.0) {
        panic("f4 failed");
    }
}

Dual _f1(Dual x) {
    return dual_pow(x, 2LL);
}

void user_main() {
    test_differentiate();
    double res = differentiate(f, 9.0, 2LL);
    printf("%g\n", res);
}

Dual _f(Dual y) {
    return dual_mul(dual_pow(y, 2LL), dual_pow(y, 4LL));
}

int main(void) {
    {
        long long __start = _now();
        user_main();
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
